2004-10-16  Stefan Jahn  <stefan@lkcc.org>

	* *.tex: Added copyright notice in all LaTex files.

2004-10-08  Stefan Jahn  <stefan@lkcc.org>

	* dcanalysis.tex (subsection{Symmetrical transformer}): Fixed
	DC equations of the symmetrical transformer in documentation.

	* transient.tex (subsection{Order and local truncation error}): 
	Scribbled down the error constants for explicit Gear method.

	* stabgearex.m: New file computing order, steps, error constants
	and stability regions of explicit Gear formulae.

2004-10-01  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Properties of numerical integration
	methods}): Added introduction to mathematical terms.
	(section{Predictor-corrector methods}): Started to document
	the predictor-corrector methods.

	* stabbashford.m, stabmoulton.m: Additionally displaying the
	error coefficients of each integration order.

2004-09-29  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (dist_man_MANS): Added simple man page.

2004-09-26  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Controlled sources}): Documented
	the MNA matrix entries of various AC components.

2004-09-25  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Depletion Capacitance}):
	Documented handling of depletion and diffusion capacitances
	during transient analysis.
	(subsection{Transmission line}): Fixed Y-parameters of
	lossless transmission line.

2004-09-22  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Stability considerations}):
	Finished section about stability of integration methods.

2004-09-20  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Stability considerations}): Checked
	zero-stability and absolute stability ranges for Adams-Moulton,
	Adams-Bashford and Gear.  Visualized these in three new plots
	and included them into documentation.

2004-09-19  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Inductor}): Small section