@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: mosfet.h,v 1.7 2004-10-16 16:42:31 ela Exp $
+ * $Id: mosfet.h,v 1.8 2004-10-17 09:44:30 ela Exp $
  *
  */
 
@@ -42,7 +42,7 @@ class mosfet : public circuit
   void calcTR (nr_double_t);
 
  private:
-  nr_double_t UbsPrev, UbdPrev, UgsPrev, UgdPrev, UdsPrev, Udsat, Uon;
+  nr_double_t UbsPrev, UbdPrev, UgsPrev, UgdPrev, UdsPrev, UgbPrev, Udsat, Uon;
   nr_double_t gbs, gbd, gm, gds, gmb, Ids, DrainControl, SourceControl;
   nr_double_t Leff, MOSdir, beta, Cox, Phi, Ga, Vto, Rs, Rd;
   nr_double_t Qgd, Qgs, Qbd, Qbs, Qgb, Ibs, Ibd;
