@@ -1,3 +1,8 @@
+2004-10-17  Stefan Jahn  <stefan@lkcc.org>
+
+	* trsolver.cpp: Run inititialization routine also for created
+	circuits.
+
 2004-10-16  Stefan Jahn  <stefan@lkcc.org>
 
 	* circuit.cpp (transientCapacitance): Readjusted the code for
